2022/12/19 -------------------------------
Project init
   |
   |----> Structure and Basic Layout
   |----> Models selection