@@ -4,10 +4,11 @@
 You can access Google Colab from [here](https://colab.research.google.com/).
 
 ## 2. Project repository
-The ZDMP project notebook [Colab Project](https://colab.research.google.com/drive/1T8YBW3MSrThi-z1UTWcw7gcpe3aALvrc?usp=sharing) (public).
+* The ZDMP project **minified** notebook [Colab Minified Project](https://colab.research.google.com/drive/1T8YBW3MSrThi-z1UTWcw7gcpe3aALvrc?usp=sharing) (public).
+* The ZDMP project notebook [Colab Project](https://colab.research.google.com/drive/1WsNfZyE1T3Pm-japxZFVbmFS3mVGfUnW?usp=sharing) (public)
 
 ## 3. Notebook file
-You can import the original notebook.ipynb file `ZDMP.ipynb` from [docs folder](./docs/ZDMP.ipynb)
+You can import all of the original notebook file `ZDMP.ipynb` from [docs folder](./docs/ZDMP.ipynb)
 
 
 
