@@ -10,7 +10,6 @@ def load_data(path='../datasets/batch_data.csv'):
     # Read the .csv file in global path
     df = pd.read_csv(path)
     # Remove all not Number item row
-    df[np.isfinite(df).all(1)]
+    df = df[np.isfinite(df).all(1)]
 
-    
     return df
